service-publicAPI.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-publicapi
  namespace: public
spec:
  type: ClusterIP
  selector:
    app: pod-publicapi
  ports:
    - name: pod-publicapi
      protocol: TCP
      port: 3000
      targetPort: 3000
